--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="C:/Users/nicho/OneDrive - Furman University/Documents/GitHub/CSC223-Lab6-InputFacade/json-20220320.jar"/>
+	<classpathentry kind="lib" path="json-20220320.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
